---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/samples/tables.md
---
Normal table:

─────────────────────────────────────────────────────
[1m left aligned [0m[1m centered [0m[1m right aligned [0m[1m no alignment [0m
─────────────────────────────────────────────────────
 cell            cell             cell  cell         
 cell            cell             cell  cell         
 cell            cell             cell  cell         
─────────────────────────────────────────────────────

Table without body:

──────
[1m head [0m
──────
──────

Table with empty cells:

──────
[1m a [0m[1m b [0m
──────
      
──────

Inline markups in table:

───────
[1m head  [0m
───────
 a b c 
───────
